# NetStream

./: .env.example  .gitignore  NetStream.sln  NetStream.sln.DotSettings  README.md  auto_update.txt  autoupdate2.txt  index.html  style.css  updater.txt
LibTorrentSharp2/: CMakeLists.txt  LibTorrentSharp2.sln  build-macos.sh  build_android.bat
LibTorrentSharp2/LibTorrentSharp2/: LibTorrentSharp2.vcxproj  libtorrentsharp2.cpp  libtorrentsharp2.h
NetStream/: App.config  App.xaml  App.xaml.cs  AppSettings.cs  AppSettingsManager.cs  AsyncObservableCollection.cs  Cast.cs  Directory.Packages.props  Essentials.cs  FastObservableCollection.cs  FileHelper.cs  FirestoreManager.cs  FirestoreService.cs  HWIDGenerator.cs  IgnoreMouseWheelBehavior.cs  Indexer.cs  JackettService.cs  Libtorrent.cs  LocalStream.cs  LogManager.cs  MainMovie.cs  MainMovieNameWidthToPercentageConverter.cs  MainOverviewWidthConverter.cs  MonoTorrentStream.cs  Movie.cs  MovieDetail.cs  NetStream.csproj  NetStream.sln  NetStreamUpdater.deps.json  NotificationManager.cs  ObservableImmutableList.cs  PaymentManager.cs  PhotoDetail.cs  PipeMediaInput.cs  PlayerCache.cs  Program.cs  RangeObservableCollection.cs  ScrollViewerMaxSizeBehavior.cs  ScrollViewerUtilities.cs  Season.cs  (+13 more)
NetStream/Language/: LanguageManager.cs  StringResources.af.xaml  StringResources.ar.xaml  StringResources.az.xaml  StringResources.be.xaml  StringResources.bg.xaml  StringResources.cn.xaml  StringResources.cs.xaml  StringResources.da.xaml  StringResources.de.xaml  StringResources.el.xaml  StringResources.en.xaml  StringResources.es.xaml  StringResources.et.xaml  StringResources.fa.xaml  StringResources.fi.xaml  StringResources.fr.xaml  StringResources.ga.xaml  StringResources.hi.xaml  StringResources.hr.xaml  StringResources.hu.xaml  StringResources.hy.xaml  StringResources.id.xaml  StringResources.it.xaml  StringResources.ja.xaml  StringResources.ka.xaml  StringResources.kk.xaml  StringResources.ko.xaml  StringResources.ky.xaml  StringResources.la.xaml  StringResources.mg.xaml  StringResources.mk.xaml  StringResources.nl.xaml  StringResources.no.xaml  StringResources.pl.xaml  StringResources.pt.xaml  StringResources.ro.xaml  StringResources.ru.xaml  StringResources.sk.xaml  StringResources.sl.xaml  (+9 more)
NetStream/NetStream/: AndroidManifest.xml  Annotations.cs  App.axaml  App.axaml.cs  AppSettings.cs  Cast.cs  (+66 more)
NetStream/NetStream.Desktop/: NetStream.Desktop.csproj  Program.cs  app.manifest  rd.xml
(+386 files in other folders)
